--- a/navbar.html
+++ b/navbar.html
@@ -84,6 +84,8 @@
             text-decoration: underline;
             text-decoration-color: #FF7555;
         }
+
+        
     </style>
 </head>
 <body>
@@ -114,6 +116,8 @@
             </div>
         </div>
     </div>
+
+    <p>test</p>
   
 </body>
 </html>
