--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
     <div id="navbar">
         <div id="leftNav">
             <div>
-               <a href="navbar.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
+               <a href="index.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
             </div>
             <div id="middleOfNav">
                 <div>Job</div>
@@ -1217,7 +1217,7 @@
    <div id="footer">
        <div>
            <div id="foot1">
-               <a href="navbar.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
+               <a href="index.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
                <p>Connect with us</p>
                    <img src="https://static.naukimg.com/s/0/0/i/new-homepage/facebook.svg" alt="">
                    <img src="https://static.naukimg.com/s/0/0/i/new-homepage/instagram.svg" alt="">
