--- a/login.html
+++ b/login.html
@@ -167,7 +167,7 @@
     <div id="topLine">
             <div id="leftNav">
                 <div>
-                   <a href="navbar.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
+                   <a href="index.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
                 </div>
             </div>
             <div id="rightNav">
@@ -246,7 +246,7 @@
                 flag=true;
                 localStorage.setItem("login",JSON.stringify(ele));
                 alert ("Login Successfull");
-                window.location.href="navbar.html"
+                window.location.href="index.html"
             }
         })
 
