--- a/register.html
+++ b/register.html
@@ -188,7 +188,7 @@
         <div id="navbar">
             <div id="leftNav">
                 <div>
-                   <a href="navbar.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
+                   <a href="index.html"> <img src="https://static.naukimg.com/s/4/100/i/naukri_Logo.png" alt=""></a>
                 </div>
             </div>
             <div id="rightNav">
