--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             justify-content: space-between;  
             /* border: 1px solid black; */
             padding: 40px;
+            z-index: 100;
         }
 
         #middleOfNav{
